--- a/src/Bundle/Sucrose.Bundle/Showcase/Sliding Clock Black White-1/css/dark.css
+++ b/src/Bundle/Sucrose.Bundle/Showcase/Sliding Clock Black White-1/css/dark.css
@@ -32,18 +32,27 @@
     margin: 0;
 }
 
-html {
+* {
+    box-sizing: border-box;
+    user-select: none;
+    padding: 0;
+    margin: 0;
+}
+
+html, body {
+    overflow-y: hidden;
+    height: 100vh;
+    display: grid;
     place-items: center;
 }
 
 body {
     font-family: monospace;
     font-size: 2rem;
-    min-height: 100vh;
-    display: grid;
-    overflow-y: hidden;
-    place-items: center;
     background: linear-gradient(-45deg, #000000, #333333c2);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .hr,
