--- a/src/Portal/Sucrose.Portal/Views/Controls/ThemeCreate.xaml
+++ b/src/Portal/Sucrose.Portal/Views/Controls/ThemeCreate.xaml
@@ -27,6 +27,7 @@
     </ui:ContentDialog.Resources>
 
     <StackPanel
+        x:Name="Root"
         MinWidth="400"
         HorizontalAlignment="Stretch"
         VerticalAlignment="Center"
